--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start:backend": "node backend/index.js",
+    "start:backend": "node backend/dist/index.js",
     "build:backend": "tsc -p backend/tsconfig.json"
 
   },
