--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,7 +5,8 @@
     "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
-    "types": ["node"]
+    "types": ["node"],
+    "skipLibCheck": true
   },
   "include": ["index.ts"]
 }
