--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,8 +5,9 @@
     "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
-    "types": ["node"],
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "types": ["node"]
   },
   "include": ["index.ts"]
 }
