--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST=localhost
+DB_HOST=${RAILWAY_TCP_PROXY_DOMAIN}
 DB_USER=root
-DB_PASSWORD= password # Replace this with your actual MySQL root password
-DB_NAME=bnb_maintenances_services
+DB_PASSWORD= JtekfkSuYkbfgwAJFGNyrPkVerkOOguP
+DB_NAME=railway
 DB_PORT=3306  # Default MySQL port
-PORT= 5000   # Your backend server port (as shown in your code)
+
