--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST=${RAILWAY_TCP_PROXY_DOMAIN}
+DB_HOST=autorack.proxy.rlwy.net
 DB_USER=root
-DB_PASSWORD= JtekfkSuYkbfgwAJFGNyrPkVerkOOguP
+DB_PASSWORD=JtekfkSuYkbfgwAJFGNyrPkVerkOOguP
 DB_NAME=railway
 DB_PORT=3306  # Default MySQL port
-PORT = 5000
+PORT=5000  # Your backend server port
