--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=autorack.proxy.rlwy.net
+DB_HOST=mysql://root:JtekfkSuYkbfgwAJFGNyrPkVerkOOguP@autorack.proxy.rlwy.net/railway
 DB_USER=root
 DB_PASSWORD=JtekfkSuYkbfgwAJFGNyrPkVerkOOguP
 DB_NAME=railway
