--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST=mysql://root:JtekfkSuYkbfgwAJFGNyrPkVerkOOguP@autorack.proxy.rlwy.net/railway
+DB_HOST=autorack.proxy.rlwy.net
 DB_USER=root
 DB_PASSWORD=JtekfkSuYkbfgwAJFGNyrPkVerkOOguP
 DB_NAME=railway
-DB_PORT=3306  # Default MySQL port
-PORT=5000  # Your backend server port
+DB_PORT=3306
+PORT=5000
