--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
-DB_HOST=mysql://root:JtekfkSuYkbfgwAJFGNyrPkVerkOOguP@autorack.proxy.rlwy.net:10937/railway
+# Database configuration
+DB_HOST=mysql.railway.internal
 DB_USER=root
 DB_PASSWORD=JtekfkSuYkbfgwAJFGNyrPkVerkOOguP
 DB_NAME=railway
 DB_PORT=3306
+
+# Application configuration
 PORT=5000
