--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Database configuration
-DB_HOST=mysql.railway.internal
+DB_HOST=mysql://root:JtekfkSuYkbfgwAJFGNyrPkVerkOOguP@autorack.proxy.rlwy.net:10937/railway
 DB_USER=root
 DB_PASSWORD=JtekfkSuYkbfgwAJFGNyrPkVerkOOguP
 DB_NAME=railway
