--- a/.env
+++ b/.env
@@ -1,9 +1,5 @@
-# Database configuration
-DB_HOST=mysql://root:JtekfkSuYkbfgwAJFGNyrPkVerkOOguP@autorack.proxy.rlwy.net:10937/railway
+DB_HOST=autorack.proxy.rlwy.net
+DB_PORT=10937
 DB_USER=root
 DB_PASSWORD=JtekfkSuYkbfgwAJFGNyrPkVerkOOguP
 DB_NAME=railway
-DB_PORT=3306
-
-# Application configuration
-PORT=5000
