--- a/.env
+++ b/.env
@@ -1,5 +1,1 @@
-DB_HOST=autorack.proxy.rlwy.net
-DB_PORT=10937
-DB_USER=root
-DB_PASSWORD=JtekfkSuYkbfgwAJFGNyrPkVerkOOguP
-DB_NAME=railway
+DATABASE_URL=mysql://root:JtekfkSuYkbfgwAJFGNyrPkVerkOOguP@mysql.railway.internal:33306/railway
